# Mudlet

./: .git-blame-ignore-revs  .gitmodules  AGENTS.md  CMakeLists.txt  SECURITY.md  asan-suppressions.txt
.claude/commands/: pr-mudlet.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: 01-bug-report.md  02-feature-request.md
.github/workflows/: build-mudlet-win.yml  build-mudlet.yml  clangtidy-diff-analysis.yml  clangtidy-post-comments.yml  codeql-analysis.yml  link-ptbs-to-dblsqd.yml  performance-analysis.yml  qridlayout-ordering.yml  update-3rdparty.yml  update-autocompletion.yml
.signpath/: artifact-configuration-binaries.xml  artifact-configuration-installer.xml
.signpath/policies/mudlet/: release-signing.yml  test-signing.yml
CI/: after_success.sh  before_install.sh  deploy-mudlet-for-windows.sh  generate-changelog.lua  install.sh  linux.after_success.sh  osx.after_success.sh  osx.install.sh  send_debug_files_to_sentry.sh  set-build-info.sh  setup-windows-sdk.sh  validate-deployment-for-windows.sh  validate_deployment.sh
cmake/: IncludeOptionalModule.cmake  InitGitSubmodule.cmake  StaticAnalysis.cmake
docs/: CONTRIBUTING.md  ai-instructions.md
src/: .clang-format  ActionUnit.cpp  ActionUnit.h  AliasUnit.cpp  AliasUnit.h  AltFocusMenuBarDisable.cpp  CMakeLists.txt  CameraController.cpp  CameraController.h  CredentialManager.cpp  CredentialManager.h  CustomLineSession.cpp  DarkTheme.cpp  EditorAddItemCommand.cpp  EditorDeleteItemCommand.cpp  EditorItemXMLHelpers.cpp  EditorModifyPropertyCommand.cpp  EditorToggleActiveCommand.cpp  EditorUndoStack.cpp  FileOpenHandler.cpp  FontManager.cpp  GMCPAuthenticator.cpp  GMCPAuthenticator.h  GeometryManager.cpp  GeometryManager.h  GifTracker.cpp  Host.cpp  Host.h  HostManager.cpp  HostManager.h  KeyUnit.cpp  KeyUnit.h  LabelTextureCache.cpp  LabelTextureCache.h  LlamaFileManager.cpp  LuaInterface.cpp  LuaInterface.h  MiddleMousePanHandler.cpp  MudletInstanceCoordinator.cpp  MudletInstanceCoordinator.h  (+204 more)
src/cmake/: WithSentry.cmake
src/crash_reporter/: main.cpp
src/mudlet-lua/: README.md
src/mudlet-lua/lua/: GUIUtils.lua  Other.lua  TableUtils.lua
src/mudlet-lua/lua/geyser/: GeyserLabel.lua
src/mudlet-lua/tests/: Alias_spec.lua  GUIUtils_spec.lua  MapMenu_spec.lua  Mapper_spec.lua  TableUtils_spec.lua  Trigger_spec.lua  UI_spec.lua
src/shaders/: vertex.glsl
src/ui/: configure_areas.ui  connection_profiles.ui  dlgPackageExporter.ui  main_window.ui  mapper.ui  module_manager.ui  notes_editor.ui  package_manager.ui  profile_preferences.ui  room_properties.ui
test/: CMakeLists.txt  README.md  SecureStringUtilsTest.cpp  TLinkStoreTest.cpp  TMxpElementDefinitionHandlerTest.cpp  TMxpFrameDestTagHandlerTest.cpp  TMxpStubClient.h
test/functional_tests/: CMakeLists.txt  TOscTerminatorTest.cpp  TelnetServerStub.cpp
translations/: mudlet.ts
translations/lua/translated/: mudlet-lua_es_ES.json  mudlet-lua_pl_PL.json
translations/translated/: mudlet_ar_SA.ts  mudlet_de_DE.ts  mudlet_el_GR.ts  mudlet_en_GB.ts  mudlet_en_PT.ts  mudlet_en_US.ts  mudlet_en_XY.ts  mudlet_es_ES.ts  mudlet_fi_FI.ts  mudlet_fr_FR.ts  mudlet_he_IL.ts  mudlet_it_IT.ts  mudlet_ko_KR.ts  mudlet_nl_NL.ts  mudlet_pl_PL.ts  mudlet_pt_BR.ts  mudlet_pt_PT.ts  mudlet_ru_RU.ts  mudlet_sv_SE.ts  mudlet_tr_TR.ts  mudlet_zh_CN.ts  mudlet_zh_TW.ts
